--- a/logisticRegression.ipynb
+++ b/logisticRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,12 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
     "import math\n",
-    "import progressbar"
+    "%run common_functions.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,63 +112,12 @@
     "        predictions = self.classes[np.argmax(X @ self.theta.T, axis = 1)]\n",
     "        accuracy = np.mean(predictions == y.flatten()) * 100\n",
     "        \n",
-    "        return accuracy, predictions\n",
-    "    \n",
-    "\n",
-    "def get_k_fold_indices(k, n, shuffle=True):\n",
-    "    indices = np.arange(n)\n",
-    "    if shuffle == True:\n",
-    "        np.random.shuffle(indices)\n",
-    "        \n",
-    "    k_folded_indices = np.array_split(indices, k)\n",
-    "    k_folded_train_indices = []\n",
-    "    k_folded_test_indices = []\n",
-    "    \n",
-    "    for i in range(k):\n",
-    "        test_indices = k_folded_indices[i]\n",
-    "        train_indices = np.setdiff1d(indices, test_indices, )\n",
-    "        k_folded_train_indices.append(train_indices)\n",
-    "        k_folded_test_indices.append(k_folded_indices[i])\n",
-    "    \n",
-    "    return k_folded_train_indices, k_folded_test_indices\n",
-    "\n",
-    "\n",
-    "def get_train_test_indices_by_tarin_percentage(train_percentage, n, shuffle=True):\n",
-    "    indices = np.arange(n)\n",
-    "    if shuffle == True:\n",
-    "        np.random.shuffle(indices)\n",
-    "        \n",
-    "    data_split_index = n * train_percentage//100 + 1\n",
-    "        \n",
-    "    return indices[:data_split_index], indices[data_split_index:]\n",
-    "    \n",
-    "\n",
-    "def printProgressBar (iteration, total, prefix = '', suffix = '', decimals = 1, length = 100, fill = '█', printEnd = \"\\r\"):\n",
-    "    \"\"\"\n",
-    "    Call in a loop to create terminal progress bar\n",
-    "    @params:\n",
-    "        iteration   - Required  : current iteration (Int)\n",
-    "        total       - Required  : total iterations (Int)\n",
-    "        prefix      - Optional  : prefix string (Str)\n",
-    "        suffix      - Optional  : suffix string (Str)\n",
-    "        decimals    - Optional  : positive number of decimals in percent complete (Int)\n",
-    "        length      - Optional  : character length of bar (Int)\n",
-    "        fill        - Optional  : bar fill character (Str)\n",
-    "        printEnd    - Optional  : end character (e.g. \"\\r\", \"\\r\\n\") (Str)\n",
-    "    \"\"\"\n",
-    "    percent = (\"{0:.\" + str(decimals) + \"f}\").format(100 * (iteration / float(total)))\n",
-    "    filledLength = int(length * iteration // total)\n",
-    "    bar = fill * filledLength + '-' * (length - filledLength)\n",
-    "    print('\\r%s |%s| %s%% %s' % (prefix, bar, percent, suffix), end = printEnd)\n",
-    "    # Print New Line on Complete\n",
-    "    if iteration == total: \n",
-    "        print()\n",
-    "        "
+    "        return accuracy, predictions   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -194,59 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold#1 of 10:\n",
-      "Progress: |██████████----------------------------------------| 20.0% Complete\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: divide by zero encountered in log\n",
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: invalid value encountered in multiply\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#2 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#3 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#4 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#5 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#6 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#7 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#8 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#9 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#10 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "   Train errors(%)  Test errors(%)\n",
-      "0         1.175015        6.111111\n",
-      "1         4.329004        7.777778\n",
-      "2         2.350031        4.444444\n",
-      "3         2.102659        6.666667\n",
-      "4         1.360544        6.666667\n",
-      "5         2.906617        5.000000\n",
-      "6         1.298701        4.444444\n",
-      "7         1.915946        4.469274\n",
-      "8         2.039555        5.586592\n",
-      "9         1.359703        4.469274\n",
+      "\r",
+      "Progress: |--------------------------------------------------| 0.0% Complete\r",
+      "\r",
+      "Progress: |█████---------------------------------------------| 10.0% Complete\r",
+      "\r",
       "Progress: |██████████----------------------------------------| 20.0% Complete\r"
      ]
     },
@@ -264,7 +172,7 @@
      "text": [
       "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
       "   Train errors(%)  Test errors(%)\n",
-      "0         1.043115        3.342618\n"
+      "0          1.32128        3.899721\n"
      ]
     }
    ],
@@ -274,27 +182,27 @@
     "\n",
     "folds_errors = []\n",
     "\n",
-    "for fold, train_indices in enumerate(k_folded_train_indices):\n",
-    "    print(f'Fold#{fold + 1} of {k}:')\n",
-    "    test_indices = k_folded_test_indices[fold]\n",
+    "# for fold, train_indices in enumerate(k_folded_train_indices):\n",
+    "#     print(f'Fold#{fold + 1} of {k}:')\n",
+    "#     test_indices = k_folded_test_indices[fold]\n",
     "    \n",
-    "    train_x = x[train_indices]\n",
-    "    test_x = x[test_indices]\n",
-    "    train_y = y[train_indices]\n",
-    "    test_y = y[test_indices]\n",
+    "#     train_x = x[train_indices]\n",
+    "#     test_x = x[test_indices]\n",
+    "#     train_y = y[train_indices]\n",
+    "#     test_y = y[test_indices]\n",
     "    \n",
-    "    class_costs = lg.fit(train_x, train_y)\n",
+    "#     class_costs = lg.fit(train_x, train_y)\n",
     "\n",
-    "    train_accuracy, train_predictions = lg.predict(train_x, train_y)\n",
-    "    test_accuracy, test_predictions = lg.predict(test_x, test_y)\n",
-    "#     print(train_accuracy)\n",
-    "    folds_errors.append([100 - train_accuracy, 100 - test_accuracy])\n",
+    "#     train_accuracy, train_predictions = lg.predict(train_x, train_y)\n",
+    "#     test_accuracy, test_predictions = lg.predict(test_x, test_y)\n",
+    "# #     print(train_accuracy)\n",
+    "#     folds_errors.append([100 - train_accuracy, 100 - test_accuracy])\n",
     "\n",
-    "# print(all_projected_test_features)\n",
-    "errors_df = pd.DataFrame(folds_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
-    "print(errors_df)\n",
+    "# # print(all_projected_test_features)\n",
+    "# errors_df = pd.DataFrame(folds_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
+    "# print(errors_df)\n",
     "\n",
-    "train_indices, test_indices = get_train_test_indices_by_tarin_percentage(80, y.shape[0], shuffle=True)\n",
+    "train_indices, test_indices = get_train_test_indices_by_train_percentage(80, y.shape[0], shuffle=True)\n",
     "train_x = x[train_indices]\n",
     "test_x = x[test_indices]\n",
     "train_y = y[train_indices]\n",
@@ -302,8 +210,8 @@
     "\n",
     "class_costs = lg.fit(train_x, train_y)\n",
     "\n",
-    "split_train_accuracy, train_predictions = lg.predict(train_x, train_y)\n",
-    "split_test_accuracy, test_predictions = lg.predict(test_x, test_y)\n",
+    "split_train_accuracy, split_train_predictions = lg.predict(train_x, train_y)\n",
+    "split_test_accuracy, split_test_accuracy = lg.predict(test_x, test_y)\n",
     "split_errors = [[100 - split_train_accuracy, 100 - split_test_accuracy]]\n",
     "\n",
     "split_errors_df = pd.DataFrame(split_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
