--- a/logisticRegression.ipynb
+++ b/logisticRegression.ipynb
@@ -143,13 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Fold#1 of 10:\n",
       "\r",
       "Progress: |--------------------------------------------------| 0.0% Complete\r",
       "\r",
@@ -171,36 +172,82 @@
      "output_type": "stream",
      "text": [
       "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#2 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#3 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#4 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#5 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#6 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#7 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#8 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#9 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "Fold#10 of 10:\n",
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
       "   Train errors(%)  Test errors(%)\n",
-      "0          1.32128        3.899721\n"
+      "0         2.535560        3.333333\n",
+      "1         2.226345        7.222222\n",
+      "2         1.855288        7.222222\n",
+      "3         1.793445        3.888889\n",
+      "4         1.298701        6.666667\n",
+      "5         1.978973        1.666667\n",
+      "6         1.298701        3.888889\n",
+      "7         2.533993        5.586592\n",
+      "8         1.545117        6.703911\n",
+      "9         2.039555        5.586592\n",
+      "Progress: |█████████████████████████████████████████████-----| 90.0% Complete\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: divide by zero encountered in log\n",
+      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: invalid value encountered in multiply\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
+      "   Train errors(%)                                     Test errors(%)\n",
+      "0          1.32128  [94.0, 93.0, 95.0, 94.0, 94.0, 92.0, 95.0, 100...\n"
      ]
     }
    ],
    "source": [
     "lg = LogisticRegression()\n",
+    "k = 10\n",
     "k_folded_train_indices, k_folded_test_indices = get_k_fold_indices(k, y.shape[0], shuffle=True)\n",
     "\n",
     "folds_errors = []\n",
     "\n",
-    "# for fold, train_indices in enumerate(k_folded_train_indices):\n",
-    "#     print(f'Fold#{fold + 1} of {k}:')\n",
-    "#     test_indices = k_folded_test_indices[fold]\n",
+    "for fold, train_indices in enumerate(k_folded_train_indices):\n",
+    "    print(f'Fold#{fold + 1} of {k}:')\n",
+    "    test_indices = k_folded_test_indices[fold]\n",
     "    \n",
-    "#     train_x = x[train_indices]\n",
-    "#     test_x = x[test_indices]\n",
-    "#     train_y = y[train_indices]\n",
-    "#     test_y = y[test_indices]\n",
+    "    train_x = x[train_indices]\n",
+    "    test_x = x[test_indices]\n",
+    "    train_y = y[train_indices]\n",
+    "    test_y = y[test_indices]\n",
     "    \n",
-    "#     class_costs = lg.fit(train_x, train_y)\n",
+    "    class_costs = lg.fit(train_x, train_y)\n",
     "\n",
-    "#     train_accuracy, train_predictions = lg.predict(train_x, train_y)\n",
-    "#     test_accuracy, test_predictions = lg.predict(test_x, test_y)\n",
-    "# #     print(train_accuracy)\n",
-    "#     folds_errors.append([100 - train_accuracy, 100 - test_accuracy])\n",
+    "    train_accuracy, train_predictions = lg.predict(train_x, train_y)\n",
+    "    test_accuracy, test_predictions = lg.predict(test_x, test_y)\n",
+    "#     print(train_accuracy)\n",
+    "    folds_errors.append([100 - train_accuracy, 100 - test_accuracy])\n",
     "\n",
-    "# # print(all_projected_test_features)\n",
-    "# errors_df = pd.DataFrame(folds_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
-    "# print(errors_df)\n",
+    "# print(all_projected_test_features)\n",
+    "errors_df = pd.DataFrame(folds_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
+    "print(errors_df)\n",
     "\n",
     "train_indices, test_indices = get_train_test_indices_by_train_percentage(80, y.shape[0], shuffle=True)\n",
     "train_x = x[train_indices]\n",
