--- a/naive_bayes_classifier.ipynb
+++ b/naive_bayes_classifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,7 @@
     "    def predict(self, x, y):\n",
     "        likelihoods = []\n",
     "        classes = np.asarray(list(self.class_means.keys()))\n",
+    "        \n",
     "        for x_i in x:\n",
     "            row = []\n",
     "            for class_id in classes:  # iterate through all the classes to get probabilities for each class\n",
@@ -72,12 +73,12 @@
     "\n",
     "        # assign x to the class with the largest posterior probability\n",
     "        predictions = classes[np.argmax(likelihoods, axis=1)]\n",
-    "        return np.sum(predictions == y[:, 0]) / len(y), predictions"
+    "        return np.sum(predictions == y[:, 0]) / len(y) * 100, predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -95,19 +96,37 @@
      "text": [
       "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:24: RuntimeWarning: divide by zero encountered in true_divide\n",
       "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:24: RuntimeWarning: invalid value encountered in true_divide\n",
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:26: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:26: RuntimeWarning: invalid value encountered in multiply\n"
+      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: invalid value encountered in multiply\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "(0.9068150208623088, 0.9108635097493036)"
-      ]
-     },
-     "execution_count": 72,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90.54242002781642 89.97214484679665\n",
+      "Fold#1 of 10:\n",
+      "Fold#2 of 10:\n",
+      "Fold#3 of 10:\n",
+      "Fold#4 of 10:\n",
+      "Fold#5 of 10:\n",
+      "Fold#6 of 10:\n",
+      "Fold#7 of 10:\n",
+      "Fold#8 of 10:\n",
+      "Fold#9 of 10:\n",
+      "Fold#10 of 10:\n",
+      "   Train errors(%)  Test errors(%)\n",
+      "0         8.596166       12.222222\n",
+      "1         8.596166       10.555556\n",
+      "2         8.905380       11.666667\n",
+      "3         9.400124        7.222222\n",
+      "4         9.276438        7.222222\n",
+      "5         8.596166        8.888889\n",
+      "6         8.905380       13.333333\n",
+      "7         9.270705        8.379888\n",
+      "8         9.208900        8.379888\n",
+      "9         9.394314        8.379888\n"
+     ]
     }
    ],
    "source": [
@@ -132,7 +151,32 @@
     "\n",
     "split_train_accuracy, split_train_predictions = nb.predict(train_x, train_y)\n",
     "split_test_accuracy, split_test_predictions = nb.predict(test_x, test_y)\n",
-    "split_train_accuracy, split_test_accuracy"
+    "print(split_train_accuracy, split_test_accuracy)\n",
+    "\n",
+    "k = 10\n",
+    "k_folded_train_indices, k_folded_test_indices = get_k_fold_indices(k, y.shape[0], shuffle=True)\n",
+    "\n",
+    "folds_errors = []\n",
+    "\n",
+    "for fold, train_indices in enumerate(k_folded_train_indices):\n",
+    "    print(f'Fold#{fold + 1} of {k}:')\n",
+    "    test_indices = k_folded_test_indices[fold]\n",
+    "    \n",
+    "    train_x = x[train_indices]\n",
+    "    test_x = x[test_indices]\n",
+    "    train_y = y[train_indices]\n",
+    "    test_y = y[test_indices]\n",
+    "    \n",
+    "    nb.fit(train_x, train_y)\n",
+    "\n",
+    "    train_accuracy, train_predictions = nb.predict(train_x, train_y)\n",
+    "    test_accuracy, test_predictions = nb.predict(test_x, test_y)\n",
+    "#     print(train_accuracy)\n",
+    "    folds_errors.append([100 - train_accuracy, 100 - test_accuracy])\n",
+    "\n",
+    "# print(all_projected_test_features)\n",
+    "errors_df = pd.DataFrame(folds_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
+    "print(errors_df)"
    ]
   },
   {
