added file for classification of digits independently

--- a/logisticRegression.ipynb
+++ b/logisticRegression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,12 +17,13 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
     "import math\n",
-    "%run common_functions.ipynb"
+    "%run common_functions.ipynb\n",
+    "%run naive_bayes_classifier.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,10 +93,10 @@
     "        class_costs = {}\n",
     "\n",
     "#         Initial call to print 0% progress\n",
-    "        printProgressBar(0, k, prefix = 'Progress:', suffix = 'Complete', length = 50)\n",
+    "        printProgressBar(0, k, prefix = 'Logistic Regression Progress:', suffix = 'Complete', length = 50)\n",
     "        \n",
     "        for class_index in range(k):\n",
-    "            printProgressBar(class_index + 1, k, prefix = 'Progress:', suffix = 'Complete', length = 50)\n",
+    "            printProgressBar(class_index + 1, k, prefix = 'Logistic Regression Progress:', suffix = 'Complete', length = 50)\n",
     "            if(self.verbose == True):\n",
     "                print(self.classes[class_index])\n",
     "            binary_class = (y == class_index).flatten()\n",
@@ -109,168 +110,13 @@
     "        if self.fit_intercept:\n",
     "            X = self.add_intercept(X)\n",
     "\n",
-    "        predictions = self.classes[np.argmax(X @ self.theta.T, axis = 1)]\n",
+    "#         predictions = self.classes[np.argmax(X @ self.theta.T, axis = 1)]\n",
+    "        all_z = self.getZ(X, self.theta)\n",
+    "        predictions = self.classes[np.argmax(self.sigmoid(all_z), axis = 1)]\n",
     "        accuracy = np.mean(predictions == y.flatten()) * 100\n",
     "        \n",
     "        return accuracy, predictions   "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 325,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x:  (1797, 64)\n",
-      "y:  (1797, 1)\n",
-      "[0. 1. 2. 3. 4. 5. 6. 7. 8. 9.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "with open('digits.csv', 'r') as csvfile:\n",
-    "    digitDataset = np.asarray(list(csv.reader(csvfile, quoting=csv.QUOTE_NONNUMERIC)))\n",
-    "    \n",
-    "x = digitDataset[:, :-1]\n",
-    "y = digitDataset[:, -1:]\n",
-    "print(\"x: \", x.shape)\n",
-    "print(\"y: \", y.shape)\n",
-    "print(np.unique(y))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold#1 of 10:\n",
-      "\r",
-      "Progress: |--------------------------------------------------| 0.0% Complete\r",
-      "\r",
-      "Progress: |█████---------------------------------------------| 10.0% Complete\r",
-      "\r",
-      "Progress: |██████████----------------------------------------| 20.0% Complete\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: divide by zero encountered in log\n",
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: invalid value encountered in multiply\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#2 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#3 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#4 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#5 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#6 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#7 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#8 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#9 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "Fold#10 of 10:\n",
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "   Train errors(%)  Test errors(%)\n",
-      "0         2.535560        3.333333\n",
-      "1         2.226345        7.222222\n",
-      "2         1.855288        7.222222\n",
-      "3         1.793445        3.888889\n",
-      "4         1.298701        6.666667\n",
-      "5         1.978973        1.666667\n",
-      "6         1.298701        3.888889\n",
-      "7         2.533993        5.586592\n",
-      "8         1.545117        6.703911\n",
-      "9         2.039555        5.586592\n",
-      "Progress: |█████████████████████████████████████████████-----| 90.0% Complete\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: divide by zero encountered in log\n",
-      "/home/hasan/Installations/miniconda3/envs/AML/lib/python3.7/site-packages/ipykernel_launcher.py:25: RuntimeWarning: invalid value encountered in multiply\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Progress: |██████████████████████████████████████████████████| 100.0% Complete\n",
-      "   Train errors(%)                                     Test errors(%)\n",
-      "0          1.32128  [94.0, 93.0, 95.0, 94.0, 94.0, 92.0, 95.0, 100...\n"
-     ]
-    }
-   ],
-   "source": [
-    "lg = LogisticRegression()\n",
-    "k = 10\n",
-    "k_folded_train_indices, k_folded_test_indices = get_k_fold_indices(k, y.shape[0], shuffle=True)\n",
-    "\n",
-    "folds_errors = []\n",
-    "\n",
-    "for fold, train_indices in enumerate(k_folded_train_indices):\n",
-    "    print(f'Fold#{fold + 1} of {k}:')\n",
-    "    test_indices = k_folded_test_indices[fold]\n",
-    "    \n",
-    "    train_x = x[train_indices]\n",
-    "    test_x = x[test_indices]\n",
-    "    train_y = y[train_indices]\n",
-    "    test_y = y[test_indices]\n",
-    "    \n",
-    "    class_costs = lg.fit(train_x, train_y)\n",
-    "\n",
-    "    train_accuracy, train_predictions = lg.predict(train_x, train_y)\n",
-    "    test_accuracy, test_predictions = lg.predict(test_x, test_y)\n",
-    "#     print(train_accuracy)\n",
-    "    folds_errors.append([100 - train_accuracy, 100 - test_accuracy])\n",
-    "\n",
-    "# print(all_projected_test_features)\n",
-    "errors_df = pd.DataFrame(folds_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
-    "print(errors_df)\n",
-    "\n",
-    "train_indices, test_indices = get_train_test_indices_by_train_percentage(80, y.shape[0], shuffle=True)\n",
-    "train_x = x[train_indices]\n",
-    "test_x = x[test_indices]\n",
-    "train_y = y[train_indices]\n",
-    "test_y = y[test_indices]\n",
-    "\n",
-    "class_costs = lg.fit(train_x, train_y)\n",
-    "\n",
-    "split_train_accuracy, split_train_predictions = lg.predict(train_x, train_y)\n",
-    "split_test_accuracy, split_test_accuracy = lg.predict(test_x, test_y)\n",
-    "split_errors = [[100 - split_train_accuracy, 100 - split_test_accuracy]]\n",
-    "\n",
-    "split_errors_df = pd.DataFrame(split_errors, columns = [\"Train errors(%)\", \"Test errors(%)\"])\n",
-    "print(split_errors_df)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
